[package]
name = "ifaddrsx"
version = "0.2.3"
edition = "2021"

[lib]
name = "ifaddrsx"
path = "src/lib.rs"

[features]
default = []
friendly = []
full = ["friendly"]

[dependencies]
ipnetwork = "0.20"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["ifdef", "iphlpapi", "iptypes", "winerror", "ws2def", "ws2ipdef"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", default-features = false, features = ["net"] }
